--- a/taskmanager/src/components/TaskList.css
+++ b/taskmanager/src/components/TaskList.css
@@ -52,15 +52,23 @@
   .task-actions {
     display: flex;
     justify-content: space-between;
+    
+  }
+  .edit-button{
+    margin-right: 4px;
+  }
+  .delete-button{
+margin-left: 4px;
   }
   
-
+  
   .edit-button, .delete-button {
     background-color: #3498db;
     color: white;
-    padding: 8px 12px;
+    padding: 4px 8px;
     border: none;
     cursor: pointer;
+  
     border-radius: 4px;
     text-decoration: none;
     transition: background-color 0.3s ease;
